--- a/src/components/Splashform/index.css
+++ b/src/components/Splashform/index.css
@@ -1,30 +1,38 @@
 .splash-section {
   width: 50%;
   margin: auto;
-  color: #990000;
-  font-family: 'Courier New';
-  font-weight: 700;
+  color: #000066;
+  font-weight: 400;
 }
+
+.heading {
+  font-size: 20px;
+  width:50%;
+  margin: auto
+}
+
 span {
   padding: 15px
 }
 
 .app-bar {
-  background-color: #1DE9B6;
-  border: 1px solid #E0E0E0;
 }
 
 .splash-container {
   width: 80%;
   margin: auto;
   box-shadow: 0px 0px 2px 2px #E0E0E0;
-  background-color: #ECEFF1;
+  background-color: #F9FDFF;
 }
 
 select {
-  width: 50px
+  width: 50px;
+  height: 20px;
 }
 
 .splash-row {
   padding:15px;
+}
+
+.splash-text-field {
 }
